--- a/R_AI_Modelshare_Usage_Example.ipynb
+++ b/R_AI_Modelshare_Usage_Example.ipynb
@@ -59,7 +59,7 @@
       "source": [
         "library(httr)\n",
         "\n",
-        "api_url = 'https://za2sw2v9ab.execute-api.us-east-1.amazonaws.com/prod/m'\n",
+        "api_url = 'insert your prediction API url here'\n",
         "data <- list(Body = \"insert text here\")\n",
         "\n",
         "# JSON encoded\n",
