--- a/R_AI_Modelshare_Usage_Example.ipynb
+++ b/R_AI_Modelshare_Usage_Example.ipynb
@@ -50,11 +50,7 @@
       "metadata": {
         "id": "Msxj9dbsHVSW",
         "colab_type": "code",
-        "outputId": "9422f51d-4f81-4b52-fbdd-d607c5fd3393",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
         "library(httr)\n",
@@ -68,24 +64,7 @@
         "content(r,\"parsed\")"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "[1] \"ham\""
-            ],
-            "text/latex": "'ham'",
-            "text/markdown": "'ham'",
-            "text/html": [
-              "'ham'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
+      "outputs": []
     }
   ]
 }
