--- a/R_AI_Modelshare_Usage_Example.ipynb
+++ b/R_AI_Modelshare_Usage_Example.ipynb
@@ -55,7 +55,7 @@
       "source": [
         "library(httr)\n",
         "\n",
-        "api_url = 'insert your prediction API url here'\n",
+        "api_url = 'insert prediction API url here'\n",
         "data <- list(Body = \"insert text here\")\n",
         "\n",
         "# JSON encoded\n",
